syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.klausapp.scorecalculator.service.scorechange";
option java_outer_classname = "ScoreChangeProto";

service ScoreChangeService {
  rpc getScoreChange(ScoreChangeRequest) returns (ScoreChangeResponse);
}

message ScoreChangeRequest {
  string firstPeriodStartDate = 1;
  string firstPeriodEndDate = 2;
  string secondPeriodStartDate = 3;
  string secondPeriodEndDate = 4;
}

message ScoreChangeResponse {
  int32 scoreChangePercentage = 1;
}